# move-it

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: main.yml
move-it/: Cargo.toml  README.md
move-it-cli/: Cargo.toml  Makefile.toml  README.md  README.tpl
move-it-cli/src/: main.rs
move-it/src/: action.rs  destination.rs  element.rs  engine.rs  errors.rs  filter.rs  helper.rs  lib.rs  mv.rs  producer.rs  result.rs  source.rs
move-it/src/configuration/: mod.rs  options.rs
move-it/src/destination/: mapped.rs  mod.rs  simple.rs
move-it/src/source/: directory.rs  each.rs  mod.rs
move-it/src/source/filter/: always_true.rs  and.rs  mod.rs  not.rs  or.rs  regex.rs
move-it/src/tools/: mod.rs  priority_map.rs  read_dir.rs
move-it/src/tools/info_provider/: env.rs  mod.rs
move-it/src/work/: action.rs  element.rs  filter.rs  mod.rs  producer.rs
