[package]
name = "move-it-cli"
version = "0.1.1"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
edition = "2018"
description = "An command line executable that moves files."
repository = "https://github.com/BigPapa314/move-it-ws/tree/master/move-it"
readme = "README.md"
keywords = ["cli", "files", "move", "copy"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
move-it = { path ="../move-it", version = "0.1" }

[badges]
github = { repository = "BigPapa314/move-it-ws", workflow="CI" }

[[bin]]
name = "mi"
path = "src/main.rs"
