[package]
name = "move-it-cli"
version = "0.2.2"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
edition = "2018"
description = "An command line executable that moves files."
repository = "https://github.com/BigPapa314/move-it-ws/tree/master/move-it"
readme = "README.md"
keywords = ["cli", "files", "move", "copy"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
move-it = { path ="../move-it", version = "0.2.2" }
tokio = {version = "0.2.*", features = ["full"] }
log = "0.4.11"
env_logger = "0.7.1"
clap = "~3.0.0-beta.1"
clap_generate = "~3.0.0-beta.1"
snafu = "0.6.8"

[badges]
github = { repository = "BigPapa314/move-it-ws", workflow="CI" }

[[bin]]
name = "mi"
path = "src/main.rs"
