[package]
name = "move-it"
version = "0.1.0"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
edition = "2018"
description = "A library that moves files."
repository = "https://github.com/BigPapa314/move-it-ws/tree/master/move-it"
readme = "README.md"
keywords = ["files", "move", "copy"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
error-chain = "0.12.2"
structopt = "0.3.14"
streaming-iterator = "0.1.5"

[badges]
github = { repository = "BigPapa314/move-it-ws", workflow="CI" }
