[package]
name = "move-it"
version = "0.1.1"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
edition = "2018"
description = "A library that moves files."
repository = "https://github.com/BigPapa314/move-it-ws/tree/master/move-it"
readme = "README.md"
keywords = ["files", "move", "copy"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
error-chain = "0.12.2"
structopt = "0.3.14"
#clap = "~3.0.0-beta.1"
streaming-iterator = "0.1.5"
regex = "1.3.9"
assert2 = "0.2.1"

[badges]
github = { repository = "BigPapa314/move-it-ws", workflow="CI" }
