[package]
name = "move-it"
version = "0.2.2"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
edition = "2018"
description = "A library that moves files."
repository = "https://github.com/BigPapa314/move-it-ws/tree/master/move-it"
readme = "README.md"
keywords = ["files", "move", "copy"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
log = "0.4.11"
#env_logger = "0.7.1"

#clap = "~3.0.0-beta.1"
regex = "1.3.9"
assert2 = "0.3.1"
shellexpand = "2.0.0"
lazy_static = "1.4.0"

[badges]
github = { repository = "BigPapa314/move-it-ws", workflow="CI" }
